
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_5__ {scalar_t__ (* out_line ) (int ,TYPE_2__*,int) ;int priv; } ;
typedef TYPE_1__ xdemitcb_t ;
struct TYPE_6__ {char* ptr; int size; } ;
typedef TYPE_2__ mmbuffer_t ;
typedef int buf ;


 int memcpy (char*,char const*,long) ;
 scalar_t__ stub1 (int ,TYPE_2__*,int) ;
 scalar_t__ xdl_num_out (char*,long) ;

__attribute__((used)) static int xdl_format_hunk_hdr(long s1, long c1, long s2, long c2,
          const char *func, long funclen,
          xdemitcb_t *ecb) {
 int nb = 0;
 mmbuffer_t mb;
 char buf[128];

 memcpy(buf, "@@ -", 4);
 nb += 4;

 nb += xdl_num_out(buf + nb, c1 ? s1: s1 - 1);

 if (c1 != 1) {
  memcpy(buf + nb, ",", 1);
  nb += 1;

  nb += xdl_num_out(buf + nb, c1);
 }

 memcpy(buf + nb, " +", 2);
 nb += 2;

 nb += xdl_num_out(buf + nb, c2 ? s2: s2 - 1);

 if (c2 != 1) {
  memcpy(buf + nb, ",", 1);
  nb += 1;

  nb += xdl_num_out(buf + nb, c2);
 }

 memcpy(buf + nb, " @@", 3);
 nb += 3;
 if (func && funclen) {
  buf[nb++] = ' ';
  if (funclen > sizeof(buf) - nb - 1)
   funclen = sizeof(buf) - nb - 1;
  memcpy(buf + nb, func, funclen);
  nb += funclen;
 }
 buf[nb++] = '\n';

 mb.ptr = buf;
 mb.size = nb;
 if (ecb->out_line(ecb->priv, &mb, 1) < 0)
  return -1;
 return 0;
}
